(Navbar) Fixed: Style variant 2 doesn't scroll on Firefox, IE & Edge (Chat Panel) Fixed: Doesn't scroll on Firefox, IE & Edge Increased Fuse version

--- a/src/app/layout/components/chat-panel/chat-panel.component.scss
+++ b/src/app/layout/components/chat-panel/chat-panel.component.scss
@@ -34,6 +34,10 @@ chat-panel {
 
     }
 
+    .content {
+        min-height: 0;
+    }
+
     #contacts-list {
         padding: 8px 0;
         overflow: auto;
