--- a/src/app/layout/components/navbar/navbar.component.scss
+++ b/src/app/layout/components/navbar/navbar.component.scss
@@ -3,4 +3,5 @@ navbar {
     flex-direction: column;
     flex: 1 1 auto;
     width: 100%;
+    height: 100%;
 }
